2004-10-26    <rah@rahga.com>

	* clist.c (create_score_list): Disable treeview searching.
	* gyahtzee.c (do_computer_turns): Fix minor bug from last patch.
	(GyahtzeeNewGame): Remove obsolete code for CPU-only game support.

2004-10-25  Richard Hoelscher  <rah@rahga.com>

	* clist.c (row_activated_cb): Prevent players from scoring during
	CPU turns. Fixes bug #135895
	* computer.c (ComputerTurn): Removed.
	* gyahtzee.c (YahtzeeIdle): Removed.
	(do_computer_turns): Replacement for ComputerTurn, usable with or 
	without a timeout, supports the removal of sleep() in yahtzee.c
	Added ability to view the CPU dice immediately after it scores.
	(NextPlayer): add 600ms timeout and do_computer_turn()
	(gnome_modify_dice): Prevent players from modifying CPU dice.
	(roll_set_sensitive), (UpdateRollLabel): Unsensitive "Roll" button
	on third roll and during CPU turns.
	* yahtzee.c, yahtzee.h (YahtzeeDelay): Removed.

2004-10-25  Callum McKenzie  <callum@physics.otago.ac.nz>

	* yahtzee.c (play_score): Make the full house slot accept a
	yahtzee. Very few people should ever need this, but there has been
	demand (see bug #156237). 

2004-07-20  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gyahtzee.c: 
	* pix/*.xpm:
	* pix/*.svg:
	* pix/*.png:	
	* pix/Makefile.am: New SVG graphics from Ryan Stutsman. The old
	xpm and png graphics have been removed.

2004-05-26  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gyahtzee.c: Fix compiler warnings.

2004-05-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gyahtzee.c: 
	* yahtzee.c:
	* clist.c:	
	* yahtzee.h: Applied Trevor Hamm's patch to present a count of the
	number of rolls and to highlight the rows which are totals. I have
	made a few modifications for i18n purposes and because I dislike
	underlining :).

2004-03-10  Callum McKenzie  <callum@physics.otago.ac.nz>

	* setup.c (setup_game): Fix the fix. Clamp the maximum number of
	computeer players to be 5 rather than 6.
